--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>HE Trails Test</title>
+    <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
   </head>
   <body>
     <div id="root"></div>
