--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>HE Trails Test</title>
-  <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
-  <script async src="https://docs.opencv.org/master/opencv.js" type="text/javascript"></script>
+  <!-- MediaPipe Face Mesh (Stable CDN Fallback) -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
