--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>HE Trails Test</title>
+  <meta name="description"
+    content="Clinical-grade cognitive assessment suite for Hepatic Encephalopathy. Includes NCT-A, NCT-B, Stroop, and Ocular-motor biomarkers." />
+  <meta name="theme-color" content="#0f172a" />
+  <title>HE Cognitive Suite | Clinical Assessment</title>
   <!-- MediaPipe Face Mesh (Stable CDN Fallback) -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
