Major Ocular Analysis Fixes: AST/MGST latency windows, SPT gain normalization, BCEA threshold recalibration

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     content="Clinical-grade cognitive assessment suite for Hepatic Encephalopathy. Includes NCT-A, NCT-B, Stroop, and Ocular-motor biomarkers." />
   <meta name="theme-color" content="#0f172a" />
   <title>HE Cognitive Suite | Clinical Assessment</title>
-  <!-- MediaPipe Face Mesh (Stable CDN Fallback) -->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+  <!-- MediaPipe Face Mesh (Local - No CDN dependency) -->
+  <script src="/mediapipe_face_mesh/face_mesh.js" crossorigin="anonymous"></script>
+  <script src="/mediapipe_camera_utils/camera_utils.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
